# kairosium-finance-anomaly-agent

./: .ae_ignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOY_AGENT_ENGINE.md  DESIGN_SPEC.md  Makefile  README.md  SETUP.md  agent.py  cloudbuild.yaml  deployment_metadata.example.json  pyproject.toml  requirements.txt
config/: agent_config.json  loader.py
data/: generate_golden_set.py  golden_set.csv
docs/adr/: ADR-005.md  ADR-006-firestore-exclusion.md  ADR-007-agent-engine-vs-cloud-run.md  ADR-008-mcp-exclu.md  ADR-009-framework-adk.md  ADR-009-terminologie-vertex-gemini-api.md  ADR-010-modele-vertex-gemini.md  ADR-011-architecture-mono-repo-multi-agents.md  README.md
docs/kpi/: EVAL_RESULTS.md  SMOKE_TEST_2026-05-06.md
docs/planning/: ARCHITECTURE_OPTIONS.md  DEV_PLAN.md  RESEARCH_BRIEF.md
eval/: eval_config.json  evalset.json
infra/: bigquery_schema.json  cost_tracking.sql  monitoring_alert.yaml
ingestion_agent/: __init__.py  agent.py
ingestion_agent/tools/: ingest.py
orchestrator/: __init__.py  agent.py  app.py  inline_csv.py
orchestrator/tools/: alert.py  report.py
scoring_agent/: __init__.py  agent.py
scoring_agent/tools/: score.py
scripts/: apply_monitoring_policies_from_yaml.py  delete_reasoning_engine.py  env_bootstrap.py  import_test_results.py  push_latency_p95_to_monitoring.py  verify_agent_engine_remote.py
shared/: models.py  vertex_billing_labels.py
tests/: conftest.py  test_agent.py  test_inline_csv.py
